# zephyr

./: CODEOWNERS  west.yml
.github/workflows/: doc-build.yml  twister_build_only.yml
boards/adi/ad_swiot1l_sl/: ad_swiot1l_sl.dts  ad_swiot1l_sl.yaml
boards/adi/adin6310switch/: Kconfig.adin6310switch  Kconfig.defconfig  adin6310switch_max32690_m4.dts  adin6310switch_max32690_m4.yaml  board.cmake  board.yml
boards/adi/adin6310t1l/: Kconfig.adin6310t1l  Kconfig.defconfig  adin6310t1l_max32690_m4.dts  adin6310t1l_max32690_m4.yaml  adin6310t1l_max32690_m4_defconfig  board.yml
boards/adi/max32650evkit/: max32650evkit.dts  max32650evkit.yaml
boards/adi/max32651evkit/: max32651evkit.dts  max32651evkit.yaml  max32651evkit_defconfig
boards/adi/max32657evkit/: Kconfig.max32657evkit  max32657evkit_max32657.yaml
boards/adi/max32657fpga/: Kconfig.defconfig  Kconfig.max32657fpga  board.cmake  board.yml  max32657fpga_max32657.dts  max32657fpga_max32657.yaml  max32657fpga_max32657_common.dtsi  max32657fpga_max32657_defconfig  max32657fpga_max32657_ns.dts  max32657fpga_max32657_ns.yaml  max32657fpga_max32657_ns_defconfig
boards/adi/max78002evkit/: max78002evkit_max78002_m4.dts  max78002evkit_max78002_m4.yaml
boards/arm/adin6310-ethernet-switch/: adin6310_ethernet_switch.dts
boards/arm/nrf52_pca10040/: nrf52_pca10040.dts
drivers/adc/: CMakeLists.txt  Kconfig  Kconfig.ad4130  adc_ad4130.c
drivers/audio/: CMakeLists.txt  Kconfig  Kconfig.adau1x61  adau1x61.c  adau1x61.h
drivers/clock_control/: clock_control_max32.c
drivers/dma/: dma_max32.c
drivers/ethernet/: CMakeLists.txt  Kconfig  Kconfig.adin6310  Kconfig.adinx11x  eth_adin2111.c  eth_adin6310.c  eth_adin6310.h  eth_adinx11x.c  eth_adinx11x_priv.h
drivers/mdio/: CMakeLists.txt  Kconfig  Kconfig.adin6310  Kconfig.adinx11x  mdio_adin6310.c  mdio_adinx11x.c  mdio_shell.c
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/serial/: uart_max32.c
drivers/timer/: max32_wut_timer.c
include/: sensor.h
modules/canopennode/: CMakeLists.txt  CO_driver.c  CO_driver_target.h  Kconfig  canopen_storage.c  canopennode.c  canopennode.h
samples/application_development/adin6310_eth_config/: CMakeLists.txt  README.rst  prj.conf
samples/application_development/adin6310_eth_config/src/: main.c
samples/application_development/adin6310_unmanaged_vlan/: CMakeLists.txt  README.rst
samples/application_development/adin6310_unmanaged_vlan/src/: SES_PORT_interface.h  main.c
samples/hello_world/: prj.conf
(+87 files in other folders)
